--- a/index.html
+++ b/index.html
@@ -58,11 +58,16 @@
                 <div class="column right">
                     <div class="text">I'm Phoenix and I'm a <span class="typing-2"></span></div>
                     <p>Education :    
-                         Bachelor of Technology in Computer Engineering<br></br>
-                       Study At :
-                         Goverment Engineering Collage , Dahod<br></br> 
-                       Graduation:
-                         2019-2023
+ 
+
+                        Bachelor of Technology in Computer Engineering
+                    </p>
+                    <p> 
+                        Study At : Goverment Engineering Collage , Dahod 
+                    </p>
+                    <p> 
+                        Graduation: 2019-2023
+                        
                     </p>
                     <a href="#">Download CV</a>
                 </div>
